# toy-wasm-lisp

./: Cargo.toml  README.md  hello-gc.wat  wat-assembler.lisp  watm-assembler.lisp
crates/tree-sitter-wasl/: Cargo.toml  grammar.js  package.json  tree-sitter.json
crates/tree-sitter-wasl-types/: Cargo.toml  build.rs
crates/tree-sitter-wasl-types/src/: lib.rs
crates/tree-sitter-wasl/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-wasl/queries/: highlights.scm  tags.scm
crates/tree-sitter-wasl/src/: grammar.json
docs/: wasm_types.md
runtime/: .gitignore  memory.watm  runtime.watm  start.watm  system.watm  types.watm
runtime/wasl/: runtime.wasl
runtime/watm/: .gitignore  runtime.watm  start.watm  system.watm
src/: emit.rs  envs.rs  errors.rs  locs.rs  main.rs  parser.rs
src/ast/: blocks.rs  exprs.rs  funcs.rs  idents.rs  imports.rs  locals.rs  mod.rs  mods.rs  types.rs
src/envs/: decl_idx.rs  decl_table.rs  decl_table_handle.rs  ident_map.rs  local_env.rs  mod.rs  module_env.rs  symbol_table.rs  type_indexer.rs
tests/fixtures/: exprs.wasl  fd_write.wasl  imports.wasl  params.wasl
