[package]
name = "toy-wasm-lisp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.1"
miette = { version = "7.6.0", features = ["fancy"] }
rust-sitter = "0.4.5"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
#tree-sitter = "0.26.9"
#tree-sitter-language = "0.1.7"
wasm-encoder = "0.252.0"
wasmparser = "0.252.0" # Not yet used.
wasmtime = "45.0.2"

[build-dependencies]
rust-sitter-tool = "0.4.5"
