[package]
name = "tree-sitter-wasl"
description = "Experimental grammar for a \"system\" language targetting WASL & WASL WC"
version = "0.1.0"
authors = ["Eric Kidd"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "wasl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/emk/toy-wasm-lisp"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
